<resources>
    <string name="app_name">LifestyleHub</string>
    <string name="profile">Профиль</string>
    <string name="leisure">Мой досуг</string>
    <string name="main">Главная</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="name">Имя</string>
    <string name="gender">Пол</string>
    <string name="email">Почта</string>
    <string name="phone">Телефон</string>
    <string name="surname">Фамилия</string>
    <string name="save">Создать</string>
    <string name="discard">Отмена</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="btn_signIn">Войти</string>
    <string name="logOutStr">Выйти из аккаунта</string>
    <string name="lName">Название</string>
    <string name="lNote">Заметка</string>
    <string name="lDate">Дата</string>
    <string name="selectDate">Выберите дату</string>
    <string name="createNote">Создание заметки</string>
    <string name="saveStr">Сохранить</string>
    <string name="cancelStr">Отменить</string>
    <string name="fill">Заполните все поля</string>
    <string name="more">Подробнее</string>
    <string name="delete">Удалить</string>
    <string name="addr">Адрес недоступен</string>
    <string name="noPlaces">Больше рядом нет мест</string>
    <string name="places">Мест рядом нет</string>
    <string name="noUser">Пользователь с таким именет уже существует</string>
    <string name="unknownErr">Неизвестная ошибка</string>
    <string name="empty">Заполните поля полностью</string>
    <string name="wrong">Неправильный логин или пароль</string>
    <string name="userDoesntExist">Такого пользователя не существует</string>
    <string name="unknownError">Неизвестная ошибка. Попробуйте снова</string>
    <string name="detailsError">Ошибка загрузки деталей</string>
    <string name="unnable">Невозможно получить данные</string>
</resources>