<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.trifcdr.lifestylehub.presentation.fragments.profile.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:text="@string/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:text="@string/sign_up"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/surname">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/gender">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gender_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_account"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:text="@string/discard"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_in_layout"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view_user_layout"
        android:layout_width="300dp"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:layout_gravity="center"
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="center"
            android:id="@+id/first_name_tv"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="center"
            android:id="@+id/last_name_tv"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="center"
            android:id="@+id/gender_tv"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="center"
            android:id="@+id/email_tv"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_gravity="center"
            android:id="@+id/phone_tv"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_out_btn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:text="@string/logOutStr"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</FrameLayout>